--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
         "target": "es6",
         "strict": true,
         "module": "es2015",
+        "resolveJsonModule": true,
         "moduleResolution": "node",
         "preserveConstEnums": true,
         "esModuleInterop": true,
