--- a/package.json
+++ b/package.json
@@ -1,6 +1,14 @@
 {
+  "name": "instagram-not-mutual-followers",
+  "description": "With this script you will detect which people you follow do not follow you mutually. And vice-versa, which your followers don't you follow.",
   "private": true,
-  "version": "0.1.2",
+  "version": "0.1.3",
+  "repository": "https://github.com/goodwin64/instagram-not-mutual-followers",
+  "author": {
+    "name": "Max Donchenko",
+    "email": "maxx.donchenko@gmail.com",
+    "url": "https://www.linkedin.com/in/max-donchenko-792a60b8/"
+  },
   "scripts": {
     "build-webpack-config": "tsc -p tsconfig.webpack.json",
     "build-userscript": "webpack --config .userscripter-temp/webpack.config.js",
