--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,25 @@
 {
-    "compilerOptions": {
-        "baseUrl": ".",
-        "paths": {
-            "~src/*": [ "./src/*" ]
-        },
-        "target": "es6",
-        "strict": true,
-        "module": "es2015",
-        "resolveJsonModule": true,
-        "moduleResolution": "node",
-        "preserveConstEnums": true,
-        "esModuleInterop": true,
-        "allowSyntheticDefaultImports": true,
-        "lib": [
-            "esnext",
-            "dom"
-        ],
-        "jsx": "react",
-        "jsxFactory": "h"
-    },
-    "include": [
-        "./src/*.d.ts",
-        "./src/**/*.tsx",
-        "./src/**/*.ts"
-    ]
+  "compilerOptions": {
+    "target": "es5",
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
+    "jsx": "react"
+  },
+  "include": [
+    "src"
+  ]
 }
