--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,6 @@ deploy:
   skip-cleanup: true
   github-token: $GITHUB_TOKEN  # Has been set in travis-ci.org dashboard; secure
   keep-history: true
-  local_dir: dist
+  local_dir: build
   on:
     branch: master
