--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@typed/compose": "^1.0.0",
     "@types/app-root-path": "^1.2.4",
     "app-root-path": "^3.0.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "ts-preferences": "^2.0.0",
     "typescript": "^3.7.4",
     "userscript-metadata": "^1.0.0",
@@ -27,6 +29,8 @@
     "webpack-cli": "^3.3.10"
   },
   "devDependencies": {
+    "@types/react": "^16.9.34",
+    "@types/react-dom": "^16.9.6",
     "rimraf": "^3.0.2"
   }
 }
