migrate rendering to Preact (2 React instances on 1 page were conflicting)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
             "esnext",
             "dom"
         ],
-        "jsx": "react"
+        "jsx": "react",
+        "jsxFactory": "h"
     },
     "include": [
         "./src/*.d.ts",
