--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "url": "https://www.linkedin.com/in/max-donchenko-792a60b8/"
   },
   "scripts": {
+    "analyze-bundle": "tsc -p tsconfig.webpack.json && webpack --config .userscripter-temp/webpack.config.js --profile --json > compilation-stats.json && npx webpack-bundle-analyzer compilation-stats.json",
     "build-webpack-config": "tsc -p tsconfig.webpack.json",
     "build-userscript": "webpack --config .userscripter-temp/webpack.config.js",
-    "build": "npm run clean && npm run build-webpack-config && npm run build-userscript && npm run clean",
+    "build": "npm run build-webpack-config && npm run build-userscript && npm run clean",
     "clean": "rimraf .userscripter-temp .awcache"
   },
   "dependencies": {
@@ -32,6 +33,8 @@
   "devDependencies": {
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
-    "rimraf": "^3.0.2"
+    "@types/webpack-bundle-analyzer": "^2.13.3",
+    "rimraf": "^3.0.2",
+    "webpack-bundle-analyzer": "^3.7.0"
   }
 }
