--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "workbox-webpack-plugin": "5.1.4"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.12.1",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
     "@types/webpack-bundle-analyzer": "^2.13.3",
